# capsuleTech

./: .claudeignore  .clauderules  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  README.md  biome.json  nx.json  package.json  pnpm-lock.yaml  project.json  tsconfig.base.json
.claude/: launch.json  settings.json
.claude/agents/: controller.md  entity.md  feature.md  owner-boost-layout.md  owner-boost-map.md  owner-boost-matrix.md  owner-boost-table.md  owner-deps.md  owner-git.md  owner-studio.md  owner-tests.md  owner-web-agent.md  owner-web-auth.md  owner-web-core.md  owner-web-creator.md  owner-web-dnd.md  owner-web-map.md  owner-web-menu.md  owner-web-profiler.md  owner-web-query.md  owner-web-renderer.md  owner-web-router.md  owner-web-shell.md  owner-web-ui.md  (+8 more)
.husky/: pre-commit  pre-push
apps/: OWNERSHIP.md
backend/: .tmp-cid  .tmp-payload.json  .tmp-stream.txt  Cargo.toml
backend/auth/: OWNERSHIP.md  README.md  alembic.ini  project.json  pyproject.toml
backend/auth/alembic/: env.py
backend/auth/alembic/versions/: 0001_identity_schema.py
backend/auth/src/capsule_auth/: api.py  config.py  enums.py  main.py  models.py  repo.py  schemas.py  security.py  utils.py
backend/auth/tests/: conftest.py  test_auth_api.py
backend/community/: .gitignore  OWNERSHIP.md  README.md  project.json  pyproject.toml
backend/community/alembic/: env.py
backend/community/alembic/versions/: 0001_profile_events_schema.py
backend/community/src/capsule_community/: config.py  db.py  main.py  models.py  projections.py  repo.py  schemas.py  storage.py  utils.py
backend/community/src/capsule_community/api/: __init__.py  events.py  profile.py
backend/community/src/capsule_community/clients/: auth.py
backend/community/tests/: conftest.py  test_auth_client.py  test_events_api.py  test_profile_api.py
backend/desktop/: Cargo.toml
backend/fs/: Cargo.toml
backend/fs/src/: lib.rs
backend/image/: .gitignore  OWNERSHIP.md  README.md  project.json  pyproject.toml
backend/image/src/capsule_image/: __init__.py  api.py  config.py  engine.py  main.py
backend/image/src/capsule_image/engines/: __init__.py  fake.py  flux.py  sdxl.py
backend/image/tests/: conftest.py  test_image.py
backend/lang/: OWNERSHIP.md  README.md  project.json  pyproject.toml
backend/lang/alembic/: env.py
backend/lang/alembic/versions/: 0001_lexical_schema.py  0002_rich_lexical_entry.py  0003_sense_ru_translation.py  0004_lessons_schema.py  0005_drill_dimension.py  0006_rule_category_concept_kind.py
backend/lang/content/en_US/: seed.yml
backend/lang/content/en_US/vocab/: 00-L0-core.yaml  01-L1-everyday.yaml  02-L2-extended.yaml  04-L4-literary.yaml
backend/lang/src/capsule_lang/: __init__.py  api.py  config.py  enums.py  importer.py  lessons_api.py  lessons_importer.py  lessons_repo.py  lessons_schemas.py  main.py  models.py  repo.py  schemas.py  seed.py  vault_import.py  vocab.py
backend/lang/tests/: conftest.py  seed_fixture.py  test_importer.py  test_lessons_api.py  test_lessons_importer.py  test_lessons_schema.py  test_related.py  test_senses_api.py  test_vault_import.py
backend/lang/tests/fixtures/vault/drills/: past-perfect-which-clause.md
backend/lang/tests/fixtures/vault/grammar/: grammar-verbs-tenses.md
backend/lang/tests/fixtures/vault/lessons/: past-perfect.md
backend/lang/tests/fixtures/vault/lessons/concepts/: word-as-image.md
backend/lang/tests/fixtures/vault/methods/: exercises.md
backend/lang/tests/fixtures/vault/words/: core.yaml
backend/learn/: OWNERSHIP.md  README.md  project.json  pyproject.toml
backend/learn/alembic/: env.py
backend/learn/content/lang/en_US/: seed.yml
backend/learn/src/capsule_learn/: __init__.py  api.py  checker.py  compose.py  config.py  db.py  enums.py  importer.py  lessons_api.py  main.py  models.py  schemas.py  seed.py  warm.py
backend/learn/src/capsule_learn/clients/: __init__.py  image.py  lang.py  voice.py
backend/learn/src/capsule_learn/modules/: __init__.py
backend/learn/src/capsule_learn/modules/lang/: __init__.py  api.py  repo.py
backend/learn/src/capsule_learn/modules/voice/: __init__.py  api.py  engine.py
backend/learn/src/capsule_learn/modules/voice/engines/: __init__.py  kokoro.py  styletts2.py
backend/learn/tests/: conftest.py  test_audio.py  test_checker.py  test_concepts_rules.py  test_drill_check.py  test_image.py  test_importer.py  test_lessons.py  test_related.py  test_senses_api.py  test_voice.py  test_warm.py
backend/llm/: .gitignore  OWNERSHIP.md  README.md  project.json  pyproject.toml
backend/llm/src/capsule_llm/: __init__.py  api.py  config.py  engine.py  main.py
backend/llm/src/capsule_llm/engines/: __init__.py  fake.py  llamacpp.py
backend/llm/tests/: conftest.py  test_llm.py
backend/playground/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
backend/playground/migrations/: 0001_init.sql  0002_users_and_auth.sql  0003_builds.sql
backend/playground/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/playground/src/modules/: health.rs  mod.rs
backend/scriber/ollama/src/: lib.rs
backend/scriber/server/src/: main.rs
backend/server/: Cargo.toml
backend/telegram/: Cargo.toml
backend/telegram/src/: bot.rs  config.rs  main.rs  mini_app.rs  scriber.rs  telegram.rs  web.rs
backend/tools/: Cargo.toml
backend/voice/: .gitignore  OWNERSHIP.md  README.md  project.json  pyproject.toml
backend/voice/src/capsule_voice/: __init__.py  api.py  config.py  engine.py  main.py  storage.py
backend/voice/src/capsule_voice/engines/: __init__.py  chatterbox.py  edge.py  f5.py  kokoro.py  piper.py  xtts.py
backend/voice/tests/: conftest.py  test_voice.py
docker/: AGENT-BRIEF.md
docs/: 00-index.md  figma-bridge-brief-for-playground-architect.md
imgBugs/: bug.md  bugSelect.md  fromStudio.md  remote.md
reports/: slug.md
scripts/: audit-exports.mjs  build-packages.mjs  check-ownership.mjs  compliance-inventory.mjs  deploy-preview.mjs  desktop.mjs  dev-backend.mjs  feature-report.mjs  publish.mjs  release-local.mjs  release.mjs  reset-versions.mjs
types/: capsule.d.ts
(+967 files in other folders)
