[project]
name = "capsule-image"
version = "0.1.0"
description = "Capsule image-service — stateless text-to-image capability (ADR 065/067)"
readme = "README.md"
# 3.12 (unlike voice's 3.11): the diffusers/torch stack ships cp312 wheels — there
# is no Chatterbox-style 3.11 wall here. <3.13 because torch cp313 wheels lag.
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Image engines — heavy (torch). Opt-in so CI installs only the light core.
# Engines are lazy-imported (see engine.py); the base service + `fake` engine
# stay torch-free. `gen` powers sdxl-turbo (the default). Flux additionally
# needs the T5 tokenizer stack — install `--extra gen --extra gen-flux`.
gen = [
    "torch>=2.2",
    "diffusers>=0.30",
    "transformers>=4.40",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "pillow>=10.0",
]
gen-flux = [
    # FLUX text encoder (T5) tokenizer deps — diffusers needs these to load
    # FluxPipeline. `gen` (torch/diffusers) is still required alongside.
    "sentencepiece>=0.2",
    "protobuf>=4.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capsule_image"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["capsule_image"]
mypy_path = "src"
strict = false
