[project]
name = "capsule-learn"
version = "0.1.0"
description = "Capsule learn-service — sense-centric lexical library (ADR 064)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
# TTS engines — heavy (torch). Opt-in, separate per engine so they install
# independently: `uv sync --extra voice` (Kokoro) / `--extra voice-styletts2`.
# Engines are lazy-imported (see modules/voice), so the base service + CI stay
# light. StyleTTS2 also needs the espeak-ng system binary (see README).
voice = [
    "kokoro>=0.8",
    "soundfile>=0.12",
    "numpy>=1.26",
]
voice-styletts2 = [
    "styletts2>=0.1",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capsule_learn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["capsule_learn"]
mypy_path = "src"
strict = false
