[project]
name = "capsule-llm"
version = "0.1.0"
description = "Capsule llm-service — stateless LLM-generation capability (ADR 065/074)"
readme = "README.md"
# 3.12 mirror of backend/image: llama-cpp-python ships cp312 wheels. <3.13 to
# stay in step with the rest of the backend py-stack (revisit when bumping).
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
# LLM engine — heavy (in-process inference). Opt-in so CI installs only the light
# core. `llama-cpp-python` is lazy-imported (see engines/llamacpp.py); the base
# service + `fake` engine stay dependency-free. Unlike image's `gen` this pulls
# NO torch — llama.cpp is self-contained. PyPI ships a CPU wheel by default; for
# CUDA offload install the cu-wheel (see README "GPU").
gen = [
    "llama-cpp-python>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capsule_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["capsule_llm"]
mypy_path = "src"
strict = false
