[package]
name = "capsule-telegram"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "capsule-telegram"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
