[project]
name = "capsule-voice"
version = "0.1.0"
description = "Capsule voice-service — stateless TTS capability (ADR 065/067)"
readme = "README.md"
# 3.11 wall: Chatterbox/StyleTTS2/XTTS ship wheels for 3.10/3.11 only (ADR 065 §3).
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
# TTS engines — heavy (torch). Opt-in, separate per engine so they install
# independently: `uv sync --extra voice-kokoro` / `--extra voice-chatterbox`.
# Engines are lazy-imported (see engine.py), so the base service + CI stay light.
voice-kokoro = [
    "kokoro>=0.8",
    "soundfile>=0.12",
    "numpy>=1.26",
]
voice-chatterbox = [
    # >=0.1.7: transformers-5 era; older releases pin numpy<1.26 (0.1.6) or
    # pull the broken pkuseg build (<=0.1.5).
    "chatterbox-tts>=0.1.7",
    "soundfile>=0.12",
    "numpy>=1.26",
    # resemble-perth (chatterbox dep) imports pkg_resources at runtime but does
    # not declare setuptools — without it the watermarker silently degrades to
    # None and synthesis crashes. <81: setuptools 81+ dropped pkg_resources.
    "setuptools>=70,<81",
]
voice-piper = [
    "piper-tts>=1.3",
    "huggingface-hub>=0.23",
]
voice-edge = [
    "edge-tts>=6.1",
    "soundfile>=0.12",
    "numpy>=1.26",
]
voice-xtts = [
    "coqui-tts>=0.25",
    # coqui declares transformers>=4.57 but breaks on 5.x (isin_mps_friendly
    # was removed from transformers.pytorch_utils) — cap it HERE, not globally:
    # the chatterbox world needs transformers 5.x (chatterbox 0.1.7 pins ==5.2.0).
    "transformers>=4.57,<5",
    "soundfile>=0.12",
    "numpy>=1.26",
]
voice-f5 = [
    "f5-tts>=1.0",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[tool.uv]
# chatterbox-tts pins transformers EXACTLY (0.1.7 -> ==5.2.0), coqui-tts needs
# <5 (see voice-xtts) -> the two engines cannot share a venv.
# The lock keeps both worlds; install one OR the other (see README).
conflicts = [
    [
        { extra = "voice-chatterbox" },
        { extra = "voice-xtts" },
    ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capsule_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["capsule_voice"]
mypy_path = "src"
strict = false
